# snake_game

./: Cargo.toml  TUTORIAL_EN.md  TUTORIAL_PT.md  package-lock.json  package.json
src/: index.html  index.js  lib.rs  main.rs
