[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# Common dependencies
[dependencies]
rand = "0.8.5"

# Dependencies for the WebAssembly (WASM) target
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }

# Dependencies for the native (non-WASM) target
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ggez = "0.9.0"

[[bin]]
name = "snake_game_native"
path = "src/main.rs"

